# CCCTakeup

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: check.yml
2019JuniorCPP/: CMakeLists.txt  ColdCompress.cpp  Decompress.cpp  Flipper.cpp  RuleOfThree.cpp  WinningScore.cpp
2020JuniorCPP/: Art.cpp  CMakeLists.txt  CyclicShifts.cpp  DogTreats.cpp  Epidemiology.cpp  EscapeRoom.cpp
2021JuniorCPP/: BoilingWater.cpp  CMakeLists.txt  SecretInstructions.cpp  SilentAuction.cpp
2023JuniorCPP/: CMakeLists.txt  ChilliPeppers.cpp  DeliveryDroid.cpp  SpecialEvent.cpp
